* added vignette for genoytping illumina data (crlmmIllumina.pdf in inst/doc and crlmmIllumina.Rnw in inst/scripts)
* Changed stop() to warning() when idats are of different type in readIdatFiles()


2009-07-06 R Scharpf - committed version 1.3.8

* initial development of copy number methods for illumina platform

* added Rd files for previously defined classes/methods

* some improvements to chromosome X copy number estimation

2009-07-06 R Scharpf - committed version 1.3.9

* fixed bugs in biasAdj and biasAdjNP

2009-07-09 R Scharpf - committed version 1.3.10

* changed defaults for crlmmWrapper: save.it=FALSE

* splitByChr method looks for 'chr' or 'chromosome' in colnames 

* sample-specific standard deviations in the .getEmission function

* add check for duplicated positions in creating locusset object

* computeCopynumber returns an object of class CrlmmSetList
  
  - dimnames for the elements in the list are the same

  - elements in the list are ordered by chromosome and physical
    position

  - copy number parameters in the featureData of the CopyNumberSet
    element are thresholded

2009-07-14 R Scharpf - committed version 1.3.11

* computeCopynumber requires 10 or more samples


2009-07-16 R Scharpf - committed version 1.3.12

* protocolData replacement method for CrlmmSetList objects

* added .man page for .computeCopynumber 

* Suggests VanillaICE (>= 1.7.8)  -- needed to run the copynumber.Rnw
  vignette

2009-07-16 R Scharpf - committed version 1.3.13

* fixed bug 'DF.PRIOR not found'

2009-07-16 R Scharpf - committed version 1.3.14

* fixed malformed DESCRIPTION file

2009-07-31 B Carvalho - committed version 1.3.16

* Removed several warnings at the C-level

* Fixed several incorrect links in the documentation

* Removed multiple notes "no visible binding for global variable"
  by replacing, in crlmmIlluminaWrapper and crlmmWrapper,
  a) samplesheet5 by get("samplesheet5")
  b) path by get("path")
  c) res by get("res")