@@ -252,3 +252,7 @@ is decoded and scanned
   a) samplesheet5 by get("samplesheet5")
   b) path by get("path")
   c) res by get("res")
+
+2009-08-04 R. Scharpf - committed version 1.3.17
+
+* changed readIdatFiles function to check whether arrayNames is NULL
